--- a/example/build.gradle
+++ b/example/build.gradle
@@ -1,48 +1,32 @@
-//plugins {
-//    id 'java'
-//    id 'org.springframework.boot' version '3.0.2'
-//    id 'io.spring.dependency-management' version '1.1.0'
-//    id 'org.graalvm.buildtools.native' version '0.9.18'
-//}
-//
-//group = 'cc.sofast.infrastructure'
-//version = '0.0.1'
-//sourceCompatibility = '17'
-//
-//configurations {
-//    compileOnly {
-//        extendsFrom annotationProcessor
-//    }
-//}
-//
-//processAot {
-//    enabled(false)
-//}
-//
-//processTestAot {
-//    enabled(false)
-//}
-//
-//bootJar {
-//    enabled(false)
-//}
-//
-//repositories {
-//    mavenCentral()
-//}
-//
-//dependencies {
-//    implementation 'org.springframework.boot:spring-boot-starter-web'
-//    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-//    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-//    implementation 'org.postgresql:postgresql'
-//
-//    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-//
-//}
-//
-//tasks.named('test') {
-//    //enabled(false)
-//    useJUnitPlatform()
-//    jvmArgs ["--add-opens java.base/java.lang=ALL-UNNAMED"]
-//}
+plugins {
+    id 'sofast.module.plugin'
+}
+
+processAot {
+    enabled(false)
+}
+
+processTestAot {
+    enabled(false)
+}
+
+bootJar {
+    enabled(false)
+}
+
+dependencies {
+    implementation(project(":starter"))
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'io.github.openfeign:feign-core'
+    implementation 'org.postgresql:postgresql'
+    implementation 'com.baomidou:mybatis-plus-boot-starter'
+
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+}
+
+tasks.named('test') {
+    enabled(false)
+    useJUnitPlatform()
+}
