--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,7 @@
 rootProject.name = 'multi-tenancy-spring-boot-starter'
 
 include("starter")
+include(":extend:template-schema-sync")
+include(":extend:extension-point-plugin")
 include("example")
 include("dependencies")
