--- a/extend/template-schema-sync/build.gradle
+++ b/extend/template-schema-sync/build.gradle
@@ -19,13 +19,14 @@ repositories {
 }
 
 dependencies {
-    compileOnly 'org.postgresql:postgresql'
-    compileOnly 'org.springframework.boot:spring-boot-starter-jdbc'
+    implementation 'org.postgresql:postgresql'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.apache.commons:commons-compress:1.23.0'
     implementation 'org.tukaani:xz:1.9'
+    implementation "io.github.java-diff-utils:java-diff-utils:4.12"
+    implementation 'com.vladsch.flexmark:flexmark-ext-tables:0.64.8'
 
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
