--- a/extend/extension-point-plugin/build.gradle
+++ b/extend/extension-point-plugin/build.gradle
@@ -20,13 +20,21 @@ repositories {
 
 dependencies {
     compileOnly 'org.springframework.boot:spring-boot-starter'
+    compileOnly 'org.springframework.boot:spring-boot-starter-data-redis'
+    compileOnly 'org.springframework.boot:spring-boot-starter-jdbc'
     compileOnly 'org.springframework.boot:spring-boot-starter-web'
+    compileOnly group: 'com.googlecode.aviator', name: 'aviator', version: '5.3.3'
+    compileOnly group: 'org.apache.groovy', name: 'groovy', version: '4.0.13'
     compileOnly 'com.google.auto.service:auto-service:1.1.1'
     annotationProcessor 'com.google.auto.service:auto-service:1.1.1'
 
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-web'
+    testImplementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    testImplementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    testImplementation group: 'com.googlecode.aviator', name: 'aviator', version: '5.3.3'
+    testImplementation group: 'org.apache.groovy', name: 'groovy', version: '4.0.13'
 }
 
 tasks.named('test') {
