--- a/example/src/main/resources/application.yml
+++ b/example/src/main/resources/application.yml
@@ -7,6 +7,7 @@ spring:
       ignore-path:
         - /tenant/**
         - /actuator/**
+        - /schema/**
     enabled: true
     primary: def
     datasource:
