--- a/extend/extension-point-plugin/build.gradle
+++ b/extend/extension-point-plugin/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     compileOnly 'org.springframework.boot:spring-boot-starter-web'
     compileOnly group: 'com.googlecode.aviator', name: 'aviator', version: '5.3.3'
     compileOnly group: 'org.apache.groovy', name: 'groovy', version: '4.0.13'
+    implementation group: 'net.jodah', name: 'typetools', version: '0.6.3'
     compileOnly 'com.google.auto.service:auto-service:1.1.1'
     annotationProcessor 'com.google.auto.service:auto-service:1.1.1'
 
