--- a/settings.gradle
+++ b/settings.gradle
@@ -3,5 +3,6 @@ rootProject.name = 'multi-tenancy-spring-boot-starter'
 include("starter")
 include(":extend:template-schema-sync")
 include(":extend:extension-point-plugin")
+include(":extend:dynamic-rest-sql")
 include("example")
 include("dependencies")
