--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@ rootProject.name = 'multi-tenancy-spring-boot-starter'
 
 include("starter")
 include(":extend:template-schema-sync")
+include(":extend:tenant-data-validator")
 include(":extend:extension-point-plugin")
 include(":extend:dynamic-rest-sql")
 include("example")
